--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
           <tr>
             <td align="left" valign="top" width="50%">
               <video class="video" preload="auto" id="water5" loop="" playsinline="" autoplay="" muted=""
-                src="static/videos/scan40_uforecon_best_unfavorable.mp4" onplay="resizeAndPlay(this)" style="height: 100px;">
+                src="static/videos/24.mp4" onplay="resizeAndPlay(this)" style="height: 100px;">
               </video>
     
               <canvas class="videoMerge" id="water5Merge"></canvas>
