--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
         <h3 class="title is-3">Reconstruction Results</h2>
         <video id="dollyzoom" autoplay controls muted loop playsinline
           height="100%">
-          <source src="static/videos/scan24_uforecon_best_unfavorable.mp4"
+          <source src="static/videos/24.mp4"
             type="video/mp4">
         </video>
       </div>
@@ -208,7 +208,7 @@
         <div class="column is-full_width">
           <h2 class="title is-3">Reconstructed 3D model</h2>
           <model-viewer id="transform" orientation="20deg 0 0" shadow-intensity="1" camera-controls touch-action="pan-y" ar
-            src="https://drive.google.com/file/d/1HCZ2VG9HcmU-2ilr22fRwcg6gYv9ob5_/view?usp=drive_link" alt="A 3D model of an astronaut">
+            src="https://github.com/Youngju-Na/UFORecon-project-page/blob/master/24.glb" alt="A 3D model of an astronaut">
             <div class="controls">
               <div>Roll: <input id="roll" value="20" size="3" class="number"> degrees</div>
               <div>Pitch: <input id="pitch" value="0" size="3" class="number"> degrees</div>
@@ -321,7 +321,7 @@
 <div class="container is-max-desktop content has-text-centered">
   <!-- <h2 class="title">Poster</h2> -->
   <h2 class="title is-3" >Poster</h2>
-  <img src="static/images/poster.png" class="center" />
+  <img src="static/images/concept.png" class="center" />
   </iframe>
 </div>
 
@@ -329,11 +329,11 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title">BibTeX</h2>
-    <pre><code>@article{ren2022volrecon,
-author    = {Yufan Ren, Fangjinhua Wang, Tong Zhang, Marc Pollefeys, Sabine Süsstrunk},
-title     = {VolRecon: Volume Rendering of Signed Ray Distance Functions for Generalizable Multi-View Reconstruction},
+    <pre><code>@article{na2024uforecon,
+author    = {Youngju Na, Woo Jae Kim, Kyu Beom Han, Suhyeon Ha, Sung-eui Yoon},
+title     = {UFORecon: Generalizable Sparse-View Surface Reconstruction from Arbitrary and UnFavOrable Data Sets},
 journal   = {arXiv},
-year      = {2022},
+year      = {2024},
 }</code></pre>
   </div>
 </section>
