--- a/volrecon.html
+++ b/volrecon.html
@@ -190,7 +190,7 @@
             <h3 class="title is-3">Reconstruction Results</h2>
             <video id="dollyzoom" autoplay controls muted loop playsinline
               height="100%">
-              <source src="./static/videos/video.mp4"
+              <source src="static/videos/24.mp4"
                 type="video/mp4">
             </video>
           </div>
