--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
       <div class="columns is-centered has-text-centered">
         <div class="column is-full_width">
           <h2 class="title is-3">Reconstructed 3D model</h2>
-          <model-viewer id="transform" orientation="20deg 0 0" shadow-intensity="1" camera-controls touch-action="pan-y" ar
+          <model-viewer id="transform" orientation="90deg 90deg 90deg" shadow-intensity="1" camera-controls touch-action="pan-y" ar
             src="https://github.com/Youngju-Na/UFORecon-project-page/blob/master/24.glb" alt="A 3D model of an astronaut">
             <div class="controls">
               <div>Roll: <input id="roll" value="180" size="3" class="number"> degrees</div>
