--- a/volrecon.html
+++ b/volrecon.html
@@ -188,9 +188,9 @@
         <div class="columns is-centered has-text-centered">
           <div class="column is-full_width">
             <h3 class="title is-3">Reconstruction Results</h2>
-            <video id="dollyzoom" autoplay controls muted loop playsinline
+            <video id="dollyzoom", autoplay muted loop controls
               height="100%">
-              <source src="static/videos/24.mp4"
+              <source src="static/videos/example.mp4"
                 type="video/mp4">
             </video>
           </div>
