--- a/index.html
+++ b/index.html
@@ -173,7 +173,6 @@
         </video>
       </div>
     </div>
-    
 
     <!--/ Paper video. -->
     <div class="columns is-centered has-text-centered">
@@ -203,22 +202,21 @@
       </div>
 
       <!-- Paper video. -->
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-full_width">
-        <h3 class="title is-3">Reconstruction Results</h2>
-        <video id="dollyzoom", autoplay muted loop controls
-          height="100%">
-          <source src="static/videos/uforecon_best/favorable_40.mp4"
-            type="video/mp4">
-        </video>
-        <video id="dollyzoom", autoplay muted loop controls
-          height="100%">
-          <source src="static/videos/volrecon/favorable_40.mp4"
-            type="video/mp4">
-        </video>
+      <div class="columns is-centered has-text-centered">
+        <div class="column is-full_width">
+          <h3 class="title is-3">Reconstruction Results</h2>
+          <video id="uforecon", autoplay muted loop controls
+            height="100%">
+            <source src="static/videos/uforecon_best/favorable_40.mp4"
+              type="video/mp4">
+          </video>
+          <video id="volrecon", autoplay muted loop controls
+            height="100%">
+            <source src="static/videos/volrecon/favorable_40.mp4"
+              type="video/mp4">
+          </video>
+        </div>
       </div>
-    </div>
-
                 
       <!-- source views. -->
       <!-- 3D model. -->
