--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">UFORecon: Generalizable Sparse-View Surface Reconstruction from Arbitrary and UnFavOrable Data Sets</h1>
+            <h1 class="title is-1 publication-title">UF<img src="static/images/ufo-icon-vector.webp" width=40>Recon: Generalizable Sparse-View Surface Reconstruction from Arbitrary and UnFavOrable Data Sets</h1>
             <h1 class="venue is-size-2">CVPR 2024</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
