--- a/index.html
+++ b/index.html
@@ -51,27 +51,27 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">UF<img src="static/images/ufo-icon-vector.webp" width=40>Recon: Generalizable Sparse-View Surface Reconstruction from Arbitrary and UnFavOrable Data Sets</h1>
+            <h1 class="title is-1 publication-title"><img src="static/images/free-icon-ufo-620689.png" width=60>UFORecon: Generalizable Sparse-View Surface Reconstruction from Arbitrary and UnFavOrable Data Sets</h1>
             <h1 class="venue is-size-2">CVPR 2024</h1>
-            <div class="is-size-5 publication-authors">
+            <div class="is-size-4 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Youngju Na</a><sup>1</sup>,</span>
+                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Youngju Na</a><sup></sup>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Woo Jae Kim</a><sup>1</sup>,</span>
+                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Woo Jae Kim</a><sup></sup>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Kyu Beom Han</a><sup>1</sup>,
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Kyu Beom Han</a><sup></sup>,
                   </span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Suhyeon Ha</a><sup>1</sup>,
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Suhyeon Ha</a><sup></sup>,
                   </span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Sung-eui Yoon</a><sup>1</sup>
+                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Sung-eui Yoon</a><sup></sup>
                   </span>
                   </div>
 
-                  <div class="is-size-5 publication-authors">
-                    <span class="author-block"><sup>1</sup>KAIST<br></span>
+                  <div class="is-size-3 publication-authors">
+                    <span class="author-block"><sup></sup>KAIST<br></span>
                     <!-- <span class="corresponding"><small><br><sup>*</sup>Corresponding Author</small></span> -->
                   </div>
 
@@ -132,10 +132,10 @@
     <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-full_width">
-        <h2 class="title is-3">Overview</h2>
+        <h2 class="title is-2">Overview</h2>
         <img src="static/images/pipeline.png" class="center" />
         <br>
-        <h2 class="title is-3">Abstract</h2>
+        <h2 class="title is-2">Abstract</h2>
         <div class="content has-text-justified">
           <p>
             The success of the Neural Radiance Fields (NeRF) in novel view
@@ -163,7 +163,7 @@
     <!--/ Abstract. -->
 
     <!-- Paper video. -->
-    <div class="columns is-centered has-text-centered">
+    <!-- <div class="columns is-centered has-text-centered">
       <div class="column is-full_width">
         <h3 class="title is-3">Reconstruction Results</h2>
         <video id="dollyzoom", autoplay muted loop controls
@@ -172,11 +172,12 @@
             type="video/mp4">
         </video>
       </div>
-    </div>
+    </div> -->
 
     <!--/ Paper video. -->
+    <br>
     <div class="columns is-centered has-text-centered">
-      <h3 class="title is-3">More results</h2>
+      <h3 class="title is-2">Results</h2>
     </div>
     <div class="tabs is-toggle is-fullwidth">
       <ul id ="scan_selection">
