--- a/index.html
+++ b/index.html
@@ -84,40 +84,21 @@
                         <span class="icon">
                           <i class="fas fa-file-pdf"></i>
                         </span>
-                        <span>Paper (TBU)</span>
+                        <span>arXiv (TBU)</span>
                       </a>
                     </span>
 
-                    <!-- Supplementary PDF link -->
-                    <span class="link-block">
-                      <a href="static/pdfs/supplementary_material.pdf" target="_blank"
-                      class="external-link button is-normal is-rounded is-dark">
-                      <span class="icon">
-                        <i class="fas fa-file-pdf"></i>
-                      </span>
-                      <span>Supplementary (TBU)</span>
-                    </a>
-                  </span>
 
                   <!-- Github link -->
                   <span class="link-block">
-                    <a href="https://github.com/YOUR REPO HERE" target="_blank"
+                    <a href="https://github.com/Youngju-Na/UFORecon/" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code (TBU)</span>
+                    <span>Code</span>
                   </a>
                 </span>
-
-                <!-- ArXiv abstract Link -->
-                <span class="link-block">
-                  <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
-                  class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                    <i class="ai ai-arxiv"></i>
-                  </span>
-                  <span>arXiv (TBU)</span>
                 </a>
               </span>
             </div>
@@ -173,6 +154,23 @@
         </video>
       </div>
     </div> -->
+    
+    <!-- <table width="110%">
+      <tr>
+          <td align="left" valign="top" width="50%">
+              <div class="video-compare-container" display:block>
+                  <video class="video" id="toaster_mesh" loop playsinline autoPlay muted src="test.mp4" onplay="resizeAndPlay(this)"></video>
+                  <canvas height=0 class="videoMerge" id="toaster_meshMerge"></canvas>
+              </div>
+          </td>
+          <td align="left" valign="top" width="50%">
+              <div class="video-compare-container" display:block>
+                  <video class="video" id="toaster_normals" loop playsinline autoPlay muted src="test.mp4" onplay="resizeAndPlay(this)"></video>
+                  <canvas height=0 class="videoMerge" id="toaster_normalsMerge"></canvas>
+              </div>
+          </td>
+      </tr>
+  </table> -->
 
     <!--/ Paper video. -->
     <br>
@@ -192,10 +190,10 @@
       <div class="columns is-centered has-text-centered" width="50%" >
         <div class="column" width="20%"></div>
         <div class="column">
-          <img src="static/images/source_views/40/1.png" />
+          <img src="static/images/source_views/40/1.png"  />
         </div>
         <div class="column">
-          <img src="static/images/source_views/40/2.png" />
+          <img src="static/images/source_views/40/2.png"  />
         </div>
         <div class="column">
           <img src="static/images/source_views/40/3.png" />
@@ -330,6 +328,8 @@
     <!--/ Scan 24 -->
   </div>
   </div>
+
+  
   
 </section>
 
