--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="description"
-      content="UFORecon: Generalizable Sparse-View Surface Reconstruction from Arbitrary and UnFavOrable Data Sets">
+      content="UFORecon: Generalizable Sparse-View Surface Reconstruction from Arbitrary and UnFavOrable Sets">
     <meta name="keywords"
       content="UFORecon, multi-view reconstruction">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>UFORecon: Generalizable Sparse-View Surface Reconstruction from Arbitrary and UnFavOrable Data Sets</title>
+    <title>UFORecon: Generalizable Sparse-View Surface Reconstruction from Arbitrary and UnFavOrable Sets</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-PYVRSFMDRL"></script>
@@ -51,7 +51,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title"><img src="static/images/free-icon-ufo-620689.png" width=60>UFORecon: Generalizable Sparse-View Surface Reconstruction from Arbitrary and UnFavOrable Data Sets</h1>
+            <h1 class="title is-1 publication-title"><img src="static/images/free-icon-ufo-620689.png" width=60>UFORecon: Generalizable Sparse-View Surface Reconstruction from Arbitrary and UnFavOrable Sets</h1>
             <h1 class="venue is-size-2">CVPR 2024</h1>
             <div class="is-size-4 publication-authors">
               <!-- Paper authors -->
@@ -347,7 +347,7 @@
     <h2 class="title">BibTeX</h2>
     <pre><code>@article{na2024uforecon,
 author    = {Youngju Na, Woo Jae Kim, Kyu Beom Han, Suhyeon Ha, Sung-eui Yoon},
-title     = {UFORecon: Generalizable Sparse-View Surface Reconstruction from Arbitrary and UnFavOrable Data Sets},
+title     = {UFORecon: Generalizable Sparse-View Surface Reconstruction from Arbitrary and UnFavOrable Sets},
 journal   = {arXiv},
 year      = {2024},
 }</code></pre>
