--- a/index.html
+++ b/index.html
@@ -56,17 +56,17 @@
             <div class="is-size-4 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Youngju Na</a><sup></sup>,</span>
+                <a href="https://youngju-na.github.io/" target="_blank">Youngju Na</a><sup></sup>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Woo Jae Kim</a><sup></sup>,</span>
+                  <a href="https://wkim97.github.io/" target="_blank">Woo Jae Kim</a><sup></sup>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Kyu Beom Han</a><sup></sup>,
+                    <a href="https://qbhan.oopy.io/" target="_blank">Kyu Beom Han</a><sup></sup>,
                   </span>
                   <span class="author-block">
                     <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Suhyeon Ha</a><sup></sup>,
                   </span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Sung-eui Yoon</a><sup></sup>
+                    <a href="https://sgvr.kaist.ac.kr/~sungeui/" target="_blank">Sung-eui Yoon</a><sup></sup>
                   </span>
                   </div>
 
