--- a/index.html
+++ b/index.html
@@ -113,6 +113,22 @@
     <!-- Abstract. -->
     <div class="columns is-centered has-text-centered">
       <div class="column is-full_width">
+
+        <!-- <h2 class="title is-2">Introduction</h2>
+        <p align="center">
+          <table>
+            <tr>
+              <th align="center">VolRecon</th>
+              <th align="center">Ours</th>
+            </tr>
+            <tr>
+              <td align="center"><img src="static/videos/scan65_volrecon.gif" alt="VolRecon" width="800"/></td>
+              <td align="center"><img src="static/videos/scan65_random.gif" alt="Ours(Random)" width="800"/></td>
+            </tr>
+          </table>
+        </p> -->
+
+        
         <h2 class="title is-2">Overview</h2>
         <img src="static/images/pipeline.png" class="center" />
         <br>
@@ -308,6 +324,9 @@
           </script>
         </div>
       </div>
+
+
+      
       <!--/ 3D model. -->
       <!--/ Renderings -->
       <h2 class="title is-3"></h2>
